Completed the web app

--- a/reddit_flair_detector/templates/automated_testing.html
+++ b/reddit_flair_detector/templates/automated_testing.html
@@ -6,7 +6,7 @@
     <form method="POST" action="automated_testing" name="myform" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-group">
-            <input type="file" name='myfile'>
+            <input type="file" name='upload_file'>
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary">Submit</button>
