--- a/reddit_flair_detector/templates/index.html
+++ b/reddit_flair_detector/templates/index.html
@@ -9,7 +9,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-11">
-                <input type="text" class="form-control input-sm" aria-describedby="emailHelp"
+                <input type="url" class="form-control input-sm" aria-describedby="emailHelp"
                     placeholder="Enter URL here" name="URL">
             </div>
         </div>
