--- a/reddit_flair_detector/templates/automated_testing.html
+++ b/reddit_flair_detector/templates/automated_testing.html
@@ -14,8 +14,10 @@
     </form>
 </div>
 
-{% if uploaded_file_url %}
- {{uploaded_file_url}}
+{% if error %}
+<center>
+    <p style="color: red;">{{error}}</p>
+</center>
 {% endif %}
 
 
